exports[`ActivityItem post component is self renders properly 1`] = `
<div
  className="activity-item">
  <div
    className="activity-post">
    <div
      className="avatar-wrapper">
      <div
        className="avatar"
        style={undefined}>
        <span
          className="avatar-self" />
      </div>
    </div>
    <div
      className="">
      <div
        className="meta">
        <div
          className="display-name"
          title="{name}">
          Test User
        </div>
        <div
          className="published">
          2016-09-20T19:52:57.186Z
        </div>
      </div>
      <div
        className="activity-text">
        Test Activity Content
      </div>
    </div>
    <div
      className="activity-post-actions">
      <div
        className="post-actions">
        <div
          className="post-actions-item">
          <div
            className="icon-button"
            onClick={[Function handleOnDelete]}>
            <div
              className="icon"
              title="Delete this message" />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActivityItem post component not self renders properly 1`] = `
<div
  className="activity-item">
  <div
    className="activity-post">
    <div
      className="avatar-wrapper">
      <div
        className="avatar"
        style={undefined}>
        <span
          className="avatar-letter">
          T
        </span>
      </div>
    </div>
    <div
      className="">
      <div
        className="meta">
        <div
          className="display-name"
          title="{name}">
          Test User
        </div>
        <div
          className="published">
          2016-09-20T19:52:57.186Z
        </div>
      </div>
      <div
        className="activity-text">
        Test Activity Content
      </div>
    </div>
    <div
      className="activity-post-actions">
      <div
        className="post-actions" />
    </div>
  </div>
</div>
`;

exports[`ActivityItem tombstone component renders properly 1`] = `
<div
  className="activity-item">
  <div
    className="system-message">
    Test User deleted message. 2016-09-20T19:52:57.186Z
  </div>
</div>
`;
